@@ -1,3 +1,4 @@
 boost/any.hpp
+boost/intrusive/list_hook.hpp
 boost/signals/connection.hpp
 boost/signals/trackable.hpp
