@@ -2,6 +2,7 @@ Wt/Chart/WAbstractChart
 Wt/Chart/WAxis
 Wt/Chart/WCartesianChart
 Wt/Chart/WChart2DRenderer
+Wt/Chart/WChartGlobal
 Wt/Chart/WChartPalette
 Wt/Chart/WDataSeries
 Wt/Chart/WPieChart
@@ -10,6 +11,7 @@ Wt/WAbstractArea
 Wt/WAbstractItemModel
 Wt/WAbstractListModel
 Wt/WAbstractProxyModel
+Wt/WAbstractTableModel
 Wt/WAbstractToggleButton
 Wt/WAccordionLayout
 Wt/WAnchor
@@ -37,16 +39,18 @@ Wt/WDateValidator
 Wt/WDefaultLayout
 Wt/WDefaultLoadingIndicator
 Wt/WDialog
-Wt/WDllDefs.h
 Wt/WDoubleValidator
 Wt/WEnvironment
 Wt/WEvent
 Wt/WFileResource
 Wt/WFileUpload
 Wt/WFitLayout
+Wt/WFlags
 Wt/WFont
 Wt/WFormWidget
 Wt/WFwdDeclarations
+Wt/WGlobal
+Wt/WGoogleMap
 Wt/WGridLayout
 Wt/WGroupBox
 Wt/WHBoxLayout
@@ -94,6 +98,7 @@ Wt/WPushButton
 Wt/WRadioButton
 Wt/WRectArea
 Wt/WRectF
+Wt/WRegExp
 Wt/WRegExpValidator
 Wt/WResource
 Wt/WScrollArea
