@@ -29,6 +29,8 @@ reused for another C++ instance, the Wt::Ruby runtime would still think it was
 associated with the old instance, causing seg faults and/or strange behaviour.
 * Improved the garbage collection debug logging option so that it logs the
 Ruby VALUE and not the address of the VALUE consistently.
+* Made the smoke library code generation work with Wt 2.99 and the runtime 
+compile and work with it.
 
 2009-02-11 Richard Dale  <richard.j.dale@gmail.com>
 * Improved the hash() function for Wt::Base classes to work with 64 bit 
